syntax = "proto3";

option java_multiple_files = true;
option java_package  = "com.smartclassrooms.grpc.qanda";

service qanda {
	rpc liveQandA(stream Question) returns (stream Answer);
}

message Question {
  string username = 1;
  string question_text = 2;
}

message Answer {
  string username = 1;
  string answer_text = 2;
}