syntax = "proto3";

option java_multiple_files = true;
option java_package  = "com.smartclassrooms.grpc.user";

service user {
	
	rpc register (RegisterRequest) returns (APIResponse);
	
	
}

message RegisterRequest { 
	string username = 1;
	string password = 2;
}

message APIResponse {
	string responsemessage = 1;
	int32 responseCode = 2;
}